syntax = "proto3";

package secretary.v1;

option go_package = "github.com/mvult/secretary/backend/gen/secretary/v1;secretaryv1";

import "secretary/v1/users.proto";

message Recording {
  int64 id = 1;
  string name = 2;
  string created_at = 3;
  int32 duration = 4;
  string summary = 5;
  string transcript = 6;
  string audio_url = 7;
  bool has_audio = 8;
  repeated User participants = 9;
}

message ListRecordingsRequest {}

message ListRecordingsResponse {
  repeated Recording recordings = 1;
}

message GetRecordingRequest {
  int64 id = 1;
}

message GetRecordingResponse {
  Recording recording = 1;
}

service RecordingsService {
  rpc ListRecordings(ListRecordingsRequest) returns (ListRecordingsResponse);
  rpc GetRecording(GetRecordingRequest) returns (GetRecordingResponse);
  rpc DeleteRecording(DeleteRecordingRequest) returns (DeleteRecordingResponse);
}

message DeleteRecordingRequest {
  int64 id = 1;
}

message DeleteRecordingResponse {}
