syntax = "proto3";

package secretary.v1;

option go_package = "github.com/mvult/secretary/backend/gen/secretary/v1;secretaryv1";

message User {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string role = 4;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

service UsersService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
